Fix tweet intent button whitespacing

--- a/src/content/css/mixins/content-structure.less
+++ b/src/content/css/mixins/content-structure.less
@@ -392,8 +392,12 @@
             background-position: -24px 0;
         }
 
-        .hub-content-action:first-child {
-            margin-left: -10px;
+        .hub-content-action {
+            margin-left: 10px;
+
+            &:first-child {
+                margin-left: 0px;
+            }
         }
         
         .hub-content-action-favorite {
